[gd_scene load_steps=11 format=3 uid="uid://buwwt7entjhh6"]

[ext_resource type="Script" uid="uid://dc86janl2vol" path="res://Characters/shielder.gd" id="1_i0eap"]
[ext_resource type="Shader" uid="uid://cewkp82msxu6d" path="res://Characters/stun_shader.gdshader" id="2_d3m2v"]
[ext_resource type="Texture2D" uid="uid://bjs3kgkwbaetp" path="res://Assets/shield droid/Shielded_edited.png" id="2_whnwo"]
[ext_resource type="AudioStream" uid="uid://ck8jk06hdsw3" path="res://Assets/SFX/Grab.wav" id="4_q7ni7"]
[ext_resource type="AudioStream" uid="uid://tbhh05dujyno" path="res://Assets/SFX/DashThrough.wav" id="5_pdfdr"]
[ext_resource type="AudioStream" uid="uid://cbujn8tctmke7" path="res://Assets/SFX/EnemyDeath.wav" id="6_5xsv1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ixblb"]
resource_local_to_scene = true
shader = ExtResource("2_d3m2v")
shader_parameter/flash_color = Vector3(1, 1, 0.2)
shader_parameter/flash_strength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3im1y"]
atlas = ExtResource("2_whnwo")
region = Rect2(0, 0, 24, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_g70f5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3im1y")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_iadyy"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.901639, 12.3596), 0.0, 0.0, 0, 0, Vector2(0.972678, 100), 0.0, 0.0, 0, 0]
point_count = 3

[node name="ShielderBot" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 11
script = ExtResource("1_i0eap")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_ixblb")
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_g70f5")
animation = &"Idle"

[node name="PhysicsCollisionBox" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, -4)
polygon = PackedVector2Array(-2.33333, -9.66667, 0.333333, -10, 2.33333, -10, 2, 2, 6.66667, 5.33333, 8.33333, 7.33333, 9.33333, 8.66667, -9, 9, -9, 7, -6.33333, 3.66667, -3.33333, 1.33333, -2.33333, 0.333333)

[node name="ShieldedArea" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="ShieldedAreaCollisionShape" type="CollisionPolygon2D" parent="ShieldedArea"]
position = Vector2(1, 0)
polygon = PackedVector2Array(4.33333, -15, 5.66667, -14.3333, 7.33333, -11.3333, 8.66667, -8.66667, 9.66667, -6.33333, 9.66667, -3, 9.66667, 5.33333, 0.666667, -2.66667, 0.666667, -15, -4.33333, -14.6667, -2.33333, -16.3333, 0.666667, -16.3333)

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StunShaderTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="SpecialEffects" type="Node" parent="."]

[node name="GrabParticles" type="CPUParticles2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
emitting = false
amount = 50
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 0.6
emission_shape = 1
emission_sphere_radius = 2.71
direction = Vector2(0, -1)
spread = 87.4
gravity = Vector2(0, 100)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
damping_curve = SubResource("Curve_iadyy")
scale_amount_max = 1.5

[node name="GrabbedSFX" type="AudioStreamPlayer2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
stream = ExtResource("4_q7ni7")

[node name="StunnedSFX" type="AudioStreamPlayer2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
stream = ExtResource("5_pdfdr")
volume_db = -2.0

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
stream = ExtResource("6_5xsv1")
volume_db = -3.0

[node name="ThrowHitBox" type="Area2D" parent="." groups=["ThrownEnemy"]]
collision_layer = 16
collision_mask = 16

[node name="ThrowHitBoxCollisionShape" type="CollisionPolygon2D" parent="ThrowHitBox"]
polygon = PackedVector2Array(-3.66667, -14, 1.33333, -14, 1.33333, -2.33333, 10, 5.33333, 10, 5.33333, -12, 5.33333, -11.3333, 4, -7, -1.33333, -4, -3.66667, -3.66667, -6.33333)

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="StunShaderTimer" to="." method="_on_stun_shader_timer_timeout"]
[connection signal="area_entered" from="ThrowHitBox" to="." method="_on_throw_hit_box_area_entered"]
